--- a/client/src/components/styles/DevicePurchaseSection.css
+++ b/client/src/components/styles/DevicePurchaseSection.css
@@ -14,6 +14,7 @@
   max-width: max-content;
   padding: 6px 10px;
   gap: 8px;
+  min-width: max-content;
 }
 
 .device-purchase-section .main-device-add-to-cart > img {
